2009-08-19  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/mb/hd-app-mgr.c (hd_app_mgr_execute): Fix memory leak
	caused by removal of warning without removal of preceding
	"if" statement.

2009-08-18  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.85

2009-08-18  Gordon Williams <gordon.williams@collabora.co.uk>

	More improvements for NB#113278
	* src/mb/hd-comp-mgr.c: Make sure hd_transition fade is not called
	  for incoming event notes (which go straight into switcher anyway).
	  This saves a few redraws the very first time a notification appears.

2009-08-18  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.84

2009-08-18  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#113278 - Choppy playback when receiving notification
	                   Not 100% fixed, but massively improved.
	* src/home/hd-render-manager.c: No longer hide task nav button,
	  as it will be done by hiding blur_front. Button vis should be 
	  handled by hd_tb_set_state anyway.
	* src/home/hd-title-bar.c: Now check visibility state of the
	  title bar before allowing redraws to be queued for the flashing
	  task navigator button.
	* debian/control: Set depends on new clutter (maemo45) with 
	  the redraw improvements
	
2009-08-18  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.83

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_client_property_changed): Make
	sure the client is HdApp before calling hd_comp_mgr_is_non_composited
	for it.

2009-08-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.82

	* src/util/hd-dbus.c (hd_dbus_system_bus_signal_handler): Update a
	global variable when the display goes on/off.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_texture_update_area): New commented
	out code for detecting actors that are updated when the display is
	off.

	Apply additional patch from Laszlo for NB#128223.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_unmap_notify): Switch back to